--- a/ktor-server-lambda-core/pom.xml
+++ b/ktor-server-lambda-core/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.mercateo</groupId>
     <artifactId>ktor-server-lambda</artifactId>
     <version>0.0.10-SNAPSHOT</version>
-    <relativePath>../</relativePath>
+    <relativePath>../../ktor-server-lambda/pom.xml</relativePath>
   </parent>
 
   <artifactId>ktor-server-lambda-core</artifactId>
