--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,8 +64,8 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
+            - v2-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
             - v2-dependencies-{{ checksum "pom.xml" }}
-            # fallback to using the latest cache if no exact match is found
             - v2-dependencies-
 
       - run:
@@ -108,13 +108,13 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      #- build
+      - build
       #- verify:
       #    requires:
       #      - build
       - deploy:
-          #requires:
-          #  - verify
+          requires:
+            - build
           filters:
             branches:
               only: issue15-release-plugin
