--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,17 +74,17 @@ jobs:
           name: Update version &  Deploy Master to Maven Central
           command: |
             # update username
-            git config --global user.name "${CIRCLE_USERNAME} via CircleCI"
+            #git config --global user.name "${CIRCLE_USERNAME} via CircleCI"
             # increment version
-            $MVN_CMD build-helper:parse-version \
-                versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} \
-                versions:commit
+            #$MVN_CMD build-helper:parse-version \
+            #    versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} \
+            #    versions:commit
             # Comment prefix [ci skip] prevents pipeline to trigger itself
-            git commit -am "[ci skip] increment version"
+            #git commit -am "[ci skip] increment version"
             # tag and push it
-            git tag v$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-            git push -u origin ${CIRCLE_BRANCH}
-            git push --tags
+            #git tag v$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+            #git push -u origin ${CIRCLE_BRANCH}
+            #git push --tags
             # set up gpg for signing the release artifact
             echo $GPG_SECRET_BASE64 | base64 --decode | gpg --import --no-tty --batch --yes
             echo $GPG_OWNERTRUST_BASE64 | base64 --decode | gpg --import-ownertrust --no-tty --batch --yes
