--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,10 +75,11 @@ jobs:
           command: |
             # update username
             git config --global user.name "${CIRCLE_USERNAME} via CircleCI"
-            # increment version
+            # increment version (in POM and README)
             $MVN_CMD build-helper:parse-version \
                 versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} \
                 versions:commit
+            sed -i -r '0,/<version>.*/{s/(^\s*<version>[0-9]*\.[0-9]*\.)(.*)(<\/version>)/echo "\1"$(echo $((\2+1)))"\3"/ge}' README.md
             # Comment prefix [ci skip] prevents pipeline to trigger itself
             git commit -am "[ci skip] increment version"
             # tag and push it
